substrate/frame/support/test/tests/construct_runtime_v2_ui/missing_pallet_index.stderr
error: Invalid pallet declaration, expected a #[frame::pallet_index]
  --> tests/construct_runtime_v2_ui/missing_pallet_index.rs:26:9
   |
26 |         System: frame_system
   |         ^^^^^^
